refactor: rename css class names

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="dialog-box">
+      <div class="dialogue-box">
         <div class="actor-name">...</div>
-        <div class="dialog-text">...</div>
+        <div class="dialogue-text">...</div>
       </div>
     </div>
   </body>
