--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/png" href="/itmi_rum_01.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Talk Gothic To Me</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
@@ -15,5 +13,6 @@
         <div class="dialogue-text">...</div>
       </div>
     </div>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
