feat: generate scene on canvas

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/itmi_rum_01.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <title>Talk Gothic To Me</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="dialogue-box">
-        <div class="actor-name">...</div>
-        <div class="dialogue-text">...</div>
-      </div>
+    <canvas></canvas>
+    <div class="flex">
+      <div class="hint">Click to generate dialogue.</div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
