feat: render dialogue scene inside img object

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <title>Talk Gothic To Me</title>
   </head>
   <body>
-    <canvas></canvas>
     <div class="flex">
-      <div class="hint">Click to generate dialogue.</div>
+      <div class="hint">Click on the image to generate dialogue</div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
